# static-web-cook-book

./: main.py  pyproject.toml  scraper.py  selectors.json
